<?xml version="1.0"?>
<package>
  <name>boxer_tutorials</name>
  <version>0.0.2</version>
  <description>Boxer's Tutorials.</description>
  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <author email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</author>

  <license>BSD</license>

  <url type="website">https://clearpathrobotics.com/boxer/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosdoc_lite</build_depend>

  <export>
  </export>
</package>
